--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 
 .App-content {
     position: relative;
-    z-index: 2;
-    color: white; /* Текст будет белым и четким */
+    z-index: 10;
+    color: white;
 }
 
 button {
@@ -47,6 +47,10 @@ button:focus {
     max-width: 800px;
     background: rgba(0, 0, 0, 1);
     font-family: "EB Garamond", serif;
+}
+
+.section4 {
+    background: #fffefd;
 }
 
 span {
